manifests/matrix-meetup/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: matrix-conduit
  name: matrix-conduit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix-conduit
  strategy: {}
  template:
    metadata:
      labels:
        app: matrix-conduit

    spec:
      containers:
      - image: registry.gitlab.com/famedly/conduit/matrix-conduit:v0.9.0
        name: matrix-conduit

        ports:
        - containerPort: 6167

        volumeMounts:
        - name: conduit-config
          mountPath: /etc/config
        - name: conduit-database
          mountPath: /var/lib/matrix-conduit

      volumes:
      - name: conduit-config
        configMap:
          name: conduit-config
          items:
          - key: conduit.toml
            path: conduit.toml

      - name: conduit-database
        persistentVolumeClaim:
          claimName: conduit-database-pvc

        # resources: {}
