manifests/matrix-meetup/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-route
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`matrix.meetup.mu`)
    services:
    - name: matrix-conduit
      port: 6167
  tls:
    certResolver: le
